@@ -1,0 +1,13 @@
+package lagatrix.server.tools.temperature;
+
+/**
+ * An enum with the devices who have an temperature sensors.
+ * 
+ * @author javier
+ * @since 1.0
+ */
+public enum DevicesEnum {
+    CPU,
+    GPU,
+    DISK;
+}
