@@ -8,5 +8,6 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 - LASRV001 - Create the class to exec commands and the response object.
 - LASRV001 - Create CPUInfo class to obtain information of CPU.
 - LASRV001 - Create temperature classes to obtain the temperature of CPU.
+- LASRV001 - Create an class which detects the device and return the correct temperature manager.
 
 [unreleased]: https://github.com/Lagatrix/Lagatrix-Server
